--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,7 @@ services:
     container_name: mysql
     build: ./mysql
     platform: linux/x86_64
-    command:
-      - --default-authentication-plugin=mysql_native_password
-      - --character-set-server=utf8mb4
-      - --collation-server=utf8mb4_0900_ai_ci
+    command: --default-authentication-plugin=mysql_native_password
     ports:
       - 33063:3306
     volumes:
