--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,11 +1,8 @@
-aiohttp==3.8.4
 aiomysql==0.2.0
-aiosignal==1.3.1
+aiosqlite==0.19.0
 annotated-types==0.5.0
 anyio==3.7.1
 arrow==1.2.3
-async-timeout==4.0.2
-attrs==23.1.0
 binaryornot==0.4.4
 certifi==2023.5.7
 chardet==5.1.0
@@ -14,17 +11,21 @@ click==8.1.4
 cookiecutter==2.2.0
 exceptiongroup==1.1.2
 fastapi==0.100.0
-frozenlist==1.3.3
 greenlet==2.0.2
 h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
 idna==3.4
+iniconfig==2.0.0
 Jinja2==3.1.2
 MarkupSafe==2.1.3
-multidict==6.0.4
-openai==0.27.8
+packaging==23.1
+pluggy==1.2.0
 pydantic==2.0.2
 pydantic_core==2.1.2
 PyMySQL==1.1.0
+pytest==7.4.0
+pytest-asyncio==0.21.0
 python-dateutil==2.8.2
 python-slugify==8.0.1
 PyYAML==6.0
@@ -34,8 +35,7 @@ sniffio==1.3.0
 SQLAlchemy==2.0.18
 starlette==0.27.0
 text-unidecode==1.3
-tqdm==4.65.0
+tomli==2.0.1
 typing_extensions==4.7.1
 urllib3==2.0.3
 uvicorn==0.22.0
-yarl==1.9.2
