--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ version: '3'
 services:
   python:
     container_name: python
-    build: ./app
+    build: ./src
     working_dir: /opt/src
     tty: true
     volumes:
-      - ./app:/opt/src
+      - ./src:/opt/src
     ports:
       - "8080:8080"
     env_file:
