--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,16 +1,22 @@
+aiohttp==3.8.4
 aiomysql==0.2.0
+aiosignal==1.3.1
 aiosqlite==0.19.0
 annotated-types==0.5.0
 anyio==3.7.1
 arrow==1.2.3
+async-timeout==4.0.2
+attrs==23.1.0
 binaryornot==0.4.4
 certifi==2023.5.7
 chardet==5.1.0
 charset-normalizer==3.2.0
 click==8.1.4
 cookiecutter==2.2.0
+dataclasses-json==0.5.9
 exceptiongroup==1.1.2
 fastapi==0.100.0
+frozenlist==1.3.3
 greenlet==2.0.2
 h11==0.14.0
 httpcore==0.17.3
@@ -18,10 +24,19 @@ httpx==0.24.1
 idna==3.4
 iniconfig==2.0.0
 Jinja2==3.1.2
+langchain==0.0.228
+langchainplus-sdk==0.0.20
 MarkupSafe==2.1.3
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
+multidict==6.0.4
+mypy-extensions==1.0.0
+numexpr==2.8.4
+numpy==1.25.1
+openapi-schema-pydantic==1.2.4
 packaging==23.1
 pluggy==1.2.0
-pydantic==2.0.2
+pydantic==1.10.11
 pydantic_core==2.1.2
 PyMySQL==1.1.0
 pytest==7.4.0
@@ -34,8 +49,11 @@ six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.18
 starlette==0.27.0
+tenacity==8.2.2
 text-unidecode==1.3
 tomli==2.0.1
+typing-inspect==0.9.0
 typing_extensions==4.7.1
 urllib3==2.0.3
 uvicorn==0.22.0
+yarl==1.9.2
