--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
+# OPENAI_API_KEY
+OPENAI_API_KEY=
+
 # TEST_OPENAI_KEY
-RUN_TEST_OPENAI_KEY=
+RUN_TEST_OPENAI_API_KEY=
 
 # DATABASE
 MYSQL_DATABASE=sample
