--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-# OPENAI_API_KEY
+# LLM_API_KEYS
 SYSTEM_OPENAI_API_KEY=
+SYSMTE_AZURE_OPENAI_API_KEY=
+SYSTEM_CLAUDE_API_KEY=
+SYSTEM_BIRD_API_KEY=
 
 # TEST_OPENAI_KEY
 RUN_TEST_OPENAI_API_KEY=
