--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -33,6 +33,7 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 numexpr==2.8.4
 numpy==1.25.1
+openai==0.27.8
 openapi-schema-pydantic==1.2.4
 packaging==23.1
 pluggy==1.2.0
@@ -52,6 +53,7 @@ starlette==0.27.0
 tenacity==8.2.2
 text-unidecode==1.3
 tomli==2.0.1
+tqdm==4.65.0
 typing-inspect==0.9.0
 typing_extensions==4.7.1
 urllib3==2.0.3
