feat: create env module.
env moduleから環境変数を取得する方法に修正。

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ SYSTEM_BIRD_API_KEY=
 
 # TEST_OPENAI_KEY
 RUN_TEST_OPENAI_API_KEY=
+RUN_TEST_AZURE_OPENAI_API_KEY=
+RUN_TEST_CLAUDE_API_KEY=
+RUN_TEST_BIRD_API_KEY=
 
 # DATABASE
 MYSQL_DATABASE=sample
